--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
 
                         </p>
                     </div>
-                    <div class="resume-wrap ftco-animate">
+<!--                     <div class="resume-wrap ftco-animate">
                         <span class="date">2023-2027</span>
                         <h2>National Open University Of Nigeria</h2>
-                        <span class="position">Bsc. International Relations (In View).</span>
-                    </div>
+                        <span class="position">Bsc. International Relations.</span>
+                    </div> -->
 
                 </div>
             </div>
@@ -631,7 +631,7 @@
                         </div>
                         <h3 class="mb-4">Upwork Profile</h3>
                         <p>
-                            <a href="https://www.upwork.com/freelancers/~016df73a5792d3ec20">Reach Out On Upwork</a>
+                            <a href="https://www.upwork.com/freelancers/~016df73a5792d3ec20?s=1110580755107926016">Reach Out On Upwork</a>
                         </p>
                     </div>
                 </div>
