--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
 
                         </p>
                     </div>
-<!--                     <div class="resume-wrap ftco-animate">
-                        <span class="date">2023-2027</span>
+                    <div class="resume-wrap ftco-animate">
+                        <span class="date">Undergraduate</span>
                         <h2>National Open University Of Nigeria</h2>
                         <span class="position">Bsc. International Relations.</span>
-                    </div> -->
+                    </div>
 
                 </div>
             </div>
