--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <p>I am a FullStack Software Developer with ground experienced, vast with ample practical experience around observation of best practices, in development, maintenance, and provision of software solutions that suites varieties
                                 of businesses demands. I am passionately motivated to ensure standard, accuracy during troubleshooting, maintenance, management and research. As a Software Developer, I write clean codes by following the best software engineering
                                 principles, and methodologies including SDLC, Agile methodology, and a host of numerous others. Other skills include but not limited to: Git, GitHub, GitBook, Database, Asp .Net MVC, Web API, as well as vast knowledge in
-                                HTML, CSS, Javascript, Python, and other technologies. and basic knowledge of Microsoft Dynamics 365. My objectives are to pursue a professional career in a dynamic, challenging environment and to be among the best in any
+                                HTML, CSS, Javascript, and other technologies. and basic knowledge of Microsoft Dynamics 365. My objectives are to pursue a professional career in a dynamic, challenging environment and to be among the best in any
                                 organization, discharging my duties with full dedication.
                             </p>
                             <ul class="about-info mt-4 px-md-0 px-2">
@@ -126,7 +126,7 @@
                                 <span class="number" data-number="7"></span>
                                 <span>Projects Completed</span>
                             </p>
-                            <p><a href="https://drive.google.com/file/d/1lb3nFCdY8xjGe6YbZ-X1skaHMWJz79S-/view?usp=sharing" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                            <p><a href="https://docs.google.com/document/d/1jBFHs8n7Jwu8KzuFFY_hnHE5fIK3YrQx/edit?usp=sharing&ouid=101748089538143653291&rtpof=true&sd=true" class="btn btn-primary py-3 px-3">Download CV</a></p>
                         </div>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                         </p>
                     </div>
                     <div class="resume-wrap ftco-animate">
-                        <span class="date"> September 2021 – August 2022</span>
+                        <span class="date"> September 2020 – April 2021</span>
                         <h2>Yuscomsoft</h2>
                         <span class="position">
 							Software Engineering Intern</span>
@@ -178,7 +178,7 @@
 
                     </div>
                     <div class="resume-wrap ftco-animate">
-                        <span class="date">Jan 2020- Dec 2020</span>
+<!--                         <span class="date">Jan 2020- Dec 2020</span> -->
                         <h2>Code Learners Hub</h2>
                         <span class="position">Software Engineering Training</span>
                         <p class="mt-4">I had an intensive training courses in basics and advanced levels; C#, CSS, HTML, Git, Asp.Net, MVC, Web API. partook in algorithms during my basics. I worked on personal local projects like; <strong>LOGOPHILIA</strong>(a dictionary
@@ -189,7 +189,7 @@
 
                 <div class="col-md-6">
                     <div class="resume-wrap ftco-animate">
-                        <span class="date">Feb 2022- Present</span>
+                        <span class="date">May 2021- Present</span>
                         <h2>Backend Engineer</h2>
                         <span class="position">Sysbeams Limited</span>
                         <p class="mt-4">Under supervision of senior engineers, I had the privilege to work on some projects as a FullStack Software Engineer, along with my team members in an agile and scrum-methodolody based environment.
@@ -206,16 +206,7 @@
                         <p class="mt-4">Intermediate</p>
                     </div>
 
-                    <div class="resume-wrap ftco-animate">
-                        <span class="date">Feb 2019 – Dec 2019</span>
-                        <h2>Cummins&trade;</h2>
-                        <span class="position">Software Engineer (Contract)</span>
-                        <p class="mt-4">
-                            Developed and maintained a client application <strong>EPR</strong>: An Inventory application for the management of the company's products.
-                            <br> <strong>TECH:</strong> C#, .NET Core, HTML, Scss, JavaScript, Azure Devops, Api Gateways( <i>SMTP, Twilio,WhisperSms, NumLookUp</i> ).
-
-                        </p>
-                    </div>
+                    
                     <div class="resume-wrap ftco-animate">
                         <span class="date">Undergraduate</span>
                         <h2>National Open University Of Nigeria</h2>
@@ -226,7 +217,7 @@
             </div>
             <div class="row justify-content-center mt-5">
                 <div class="col-md-6 text-center ftco-animate">
-                    <p><a href="https://drive.google.com/file/d/1lb3nFCdY8xjGe6YbZ-X1skaHMWJz79S-/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+                    <p><a href="https://docs.google.com/document/d/1jBFHs8n7Jwu8KzuFFY_hnHE5fIK3YrQx/edit?usp=sharing&ouid=101748089538143653291&rtpof=true&sd=true" class="btn btn-primary py-4 px-5">Download CV</a></p>
                 </div>
             </div>
         </div>
