--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="col-md-6">
                     <div class="resume-wrap ftco-animate">
                         <span class="date">May 2021- Present</span>
-                        <h2>Backend Engineer</h2>
+                        <h2>Software  Engineer</h2>
                         <span class="position">Sysbeams Limited</span>
                         <p class="mt-4">Under supervision of senior engineers, I had the privilege to work on some projects as a FullStack Software Engineer, along with my team members in an agile and scrum-methodolody based environment.
                             <br> Some of the projects and my roles include; Documentation of the Software Requirement Specification(SRS) of a client software (An Event Registration Application For A well-known Islamic Organization : <strong>(JARMS): <i>Jalsa Registration Management System</i> </strong>                            ). <br> Working With a team of 9 Developers in the ReDevelopment of EPin-Mart, a pin vending system that has been used by Nigerian Institutions to automate the verification of thousands of students' result. (Roles In Project:
