--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <span class="number" data-number="7"></span>
                                 <span>Projects Completed</span>
                             </p>
-                            <p><a href="https://docs.google.com/document/d/1jBFHs8n7Jwu8KzuFFY_hnHE5fIK3YrQx/view?usp=sharing" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                            <p><a href="https://drive.google.com/file/d/1Ogkd4dRhcbRi2eVLyxEFvJFJyrcgJjjM/view?usp=sharing" class="btn btn-primary py-3 px-3">Download CV</a></p>
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
             </div>
             <div class="row justify-content-center mt-5">
                 <div class="col-md-6 text-center ftco-animate">
-                    <p><a href="https://docs.google.com/document/d/1jBFHs8n7Jwu8KzuFFY_hnHE5fIK3YrQx/edit?usp=sharing&ouid=101748089538143653291&rtpof=true&sd=true" class="btn btn-primary py-4 px-5">Download CV</a></p>
+                    <p><a href="https://drive.google.com/file/d/1Ogkd4dRhcbRi2eVLyxEFvJFJyrcgJjjM/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
                 </div>
             </div>
         </div>
